# Pathtracer

./: CMakeLists.txt  vcpkg.json
src/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  ray.h  rtweekend.h  sphere.h  vec3.h
